Refactor code and move clean up logics